--- a/app/src/main/res/layout/activity_detailed_bucket.xml
+++ b/app/src/main/res/layout/activity_detailed_bucket.xml
@@ -14,6 +14,7 @@
         android:fillViewport="true">
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -26,8 +27,8 @@
 
             <ImageView
                 android:id="@+id/backButtonImageView"
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="18dp"
                 android:src="@drawable/ic_back"
@@ -66,29 +67,33 @@
             <TextView
                 android:id="@+id/titleTextView"
                 style="@style/detailedTextView"
+                android:layout_width="0dp"
                 android:layout_marginTop="14dp"
-                android:text="Harish is a good"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+                tools:text="Harish is a good"
+                android:gravity="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:transitionName="shared_trans"
+                app:layout_constraintBottom_toTopOf="@+id/guideline5"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/rootCardView" />
 
             <TextView
                 android:id="@+id/levelTextView"
                 style="@style/detailedTextView"
                 android:layout_width="wrap_content"
-                android:layout_marginTop="32dp"
-                android:text="Level"
                 android:drawableTop="@drawable/ic_dreamlevel_add_activity"
+                android:text="Level"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                 android:textColor="@color/chipBGColor"
                 android:textSize="15sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                 app:layout_constraintEnd_toStartOf="@+id/levelTextView2"
                 app:layout_constraintHorizontal_chainStyle="spread_inside"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
-                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
+                app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardColorView"
@@ -181,13 +186,14 @@
                 android:gravity="center"
                 android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+                app:layout_constraintBottom_toTopOf="@+id/guideline8"
                 app:layout_constraintEnd_toStartOf="@id/guideline3"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@id/guideline2"
                 app:layout_constraintTop_toTopOf="@+id/guideline7" />
 
 
-            <com.google.android.material.button.MaterialButton
+ <!--           <com.google.android.material.button.MaterialButton
                 android:id="@+id/editMaterialButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -202,7 +208,7 @@
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
                 app:layout_constraintTop_toTopOf="@+id/guideline8"
                 app:layout_constraintVertical_bias="0" />
-
+-->
 
             <View
                 android:id="@+id/viewSeperator"
@@ -226,24 +232,22 @@
                 app:layout_constraintTop_toTopOf="@id/levelTextView" />
 
 
-
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/accompolishMaterialButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="46dp"
                 android:layout_marginBottom="12dp"
+                android:drawableLeft="@drawable/ic_check"
                 android:fontFamily="@font/muli"
                 android:text="Accompolished"
-                android:drawableLeft="@drawable/ic_check"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
+                app:layout_constraintVertical_bias="0.5"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline3"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
-                app:layout_constraintTop_toBottomOf="@+id/editMaterialButton"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintVertical_bias="0" />
-
+                app:layout_constraintTop_toBottomOf="@+id/thoughtsTextView" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline"
@@ -251,7 +255,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_begin="54dp"
+                app:layout_constraintGuide_begin="68dp"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.constraintlayout.widget.Guideline
@@ -274,7 +278,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_end="263dp"
+                app:layout_constraintGuide_end="227dp"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <androidx.constraintlayout.widget.Guideline
@@ -282,7 +286,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_end="234dp" />
+                app:layout_constraintGuide_end="174dp" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline8"
@@ -290,6 +294,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintGuide_begin="632dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="451dp" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
