--- a/app/src/main/res/layout/container_home_display.xml
+++ b/app/src/main/res/layout/container_home_display.xml
@@ -13,19 +13,16 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
         android:layout_marginEnd="6dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
         app:cardElevation="14dp"
         android:clickable="true"
-        app:cardCornerRadius="17dp">
+        app:cardCornerRadius="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/cardBgColorHome"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:paddingRight="12dp"
             >
 
             <androidx.constraintlayout.widget.Guideline
@@ -33,16 +30,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_end="237dp" />
+                app:layout_constraintGuide_end="224dp" />
 
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardColorView"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginRight="20dp"
-                app:cardElevation="6dp"
-                app:cardCornerRadius="60dp"
+                android:layout_height="90dp"
+                android:layout_marginRight="10dp"
+                app:cardElevation="15dp"
+                app:cardCornerRadius="0dp"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/guideline"
@@ -54,6 +51,7 @@
                     android:id="@+id/cardColorImageView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:transitionName="shared_trans"
                     android:scaleType="centerCrop"
                     tools:src="@color/colorAccent"
                     />
@@ -61,49 +59,46 @@
             </androidx.cardview.widget.CardView>
 
 
-
             <TextView
                 android:id="@+id/bucketNameTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/muli"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textColor="@color/cardTextColor"
                 android:textStyle="bold"
+                android:textSize="16sp"
+                android:paddingRight="8dp"
+                app:layout_constraintVertical_bias="0.3"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/guideline"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Finish the 30 Days of kotlin" />
 
 
-
-            <TextView
-                android:id="@+id/categoryTextView"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/smallMargin"
-                android:fontFamily="@font/muli"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/cardTextColor"
-                app:layout_constraintStart_toEndOf="@id/guideline"
+                android:layout_height="6dp"
+                app:cardCornerRadius="128dp"
+                app:cardElevation="15dp"
+                app:layout_constraintVertical_bias="1"
+                app:layout_constraintHorizontal_bias="0.1"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/bucketNameTextView"
-                tools:text="Travel" />
+                app:layout_constraintStart_toStartOf="@id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/bucketNameTextView">
 
-            <TextView
-                android:id="@+id/dateTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/smallMargin"
-                android:fontFamily="@font/muli"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/cardSpecialTextColor"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/guideline"
-                app:layout_constraintTop_toBottomOf="@id/categoryTextView"
-                tools:text="29/05/2020" />
-            <!--            android:textColor="@color/colorPrimaryDark"-->
+                <ImageView
+                    android:id="@+id/cardImageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@color/colorAccent" />
+
+            </androidx.cardview.widget.CardView>
+
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
